made a small change

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--links the font roboto light-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <title>CALCULATOR</title>
+    <title>Calculator</title>
 </head>
 
 <body>
